# cw-listen-trainer

./: .gitignore
cw-listen-trainer/: Cargo.toml  README.md
cw-listen-trainer/.github/workflows/: release_linux_x86_64.yml  release_windows_x86_64.yml
cw-listen-trainer/src/: main.rs  main.rs.old
src/: main.rs  main.rs.OK
