[package]
name = "cw-listen-trainer"
version = "0.0.1"
edition = "2024"
authors = ["Dennis Schneck", "dd6ds@eclipso.de"]
license = "MIT"
license-file = "license.txt"
description = "A little Morse Program"
repository = "https://github.com/dd6ds/cw-listen-trainer/"
resolver = "2"

[dependencies]
bevy = { version = "0.16.1", features = ["flac", "mp3"] }
rand = "0.9.2"


[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*

